--- a/TermProject/TermProject.vcxproj.filters
+++ b/TermProject/TermProject.vcxproj.filters
@@ -15,16 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="fileReading.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="fileReading_2.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="testtest.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Termproject.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="temp1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="temp2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
